re-factoring: minor king unification