@@ -1,7 +1,5 @@
 package com.agutsul.chess.piece.king;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.Collection;
 import java.util.stream.Stream;
 
@@ -15,8 +13,8 @@ import com.agutsul.chess.rule.action.AbstractCastlingActionRule;
 import com.agutsul.chess.rule.action.CastlingActionRule;
 
 final class KingCastlingActionRule<COLOR extends Color,
-                                   KING extends KingPiece<COLOR>,
-                                   ROOK extends RookPiece<COLOR>>
+                                   KING  extends KingPiece<COLOR>,
+                                   ROOK  extends RookPiece<COLOR>>
         extends AbstractCastlingActionRule<COLOR,KING,ROOK,
                                            PieceCastlingAction<COLOR,KING,ROOK>>
         implements CastlingActionRule<COLOR,KING,ROOK,
@@ -34,7 +32,7 @@ final class KingCastlingActionRule<COLOR extends Color,
                 .flatMap(Collection::stream)
                 .map(rook -> super.evaluate((KingPiece<COLOR>) king, (RookPiece<COLOR>) rook))
                 .flatMap(Collection::stream)
-                .collect(toList());
+                .toList();
 
         return actions;
     }
